--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,16 @@ branding:
 inputs:
   options:
     description: "Rubocop command line options"
+  preserve_exitcode:
+    description: "Preserve rubocop exit code"
+    type: "boolean"
+    default: false
+  test_first:
+    description: "Test first boolean"
+    type: "boolean"
+  test_other:
+    description: "Test other boolean"
+    type: "boolean"
 
 runs:
   using: "docker"
