--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,8 @@ inputs:
     description: "Preserve rubocop exit code"
     type: "boolean"
     default: false
+  test_string:
+    description: "Test string"
   test_first:
     description: "Test first boolean"
     type: "boolean"
