--- a/action.yml
+++ b/action.yml
@@ -23,4 +23,4 @@ inputs:
 
 runs:
   using: "docker"
-  image: "docker://ghcr.io/d-lebed/rubocop-run-action:pr-4"
+  image: "docker://ghcr.io/d-lebed/rubocop-run-action:v0.4.0"
