--- a/.github/workflows/run_rubocop.yml
+++ b/.github/workflows/run_rubocop.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run RuboCop
-        uses: d-lebed/rubocop-run-action@v0
+        uses: d-lebed/rubocop-run-action@main
