Update to standard 1.45.0

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,11 +3,15 @@ inherit_mode:
     - Exclude
 
 require:
-  - rubocop-performance
   - standard
+  - standard-custom
+  - standard-performance
+  - rubocop-performance
 
 inherit_gem:
   standard: config/base.yml
+  standard-custom: config/base.yml
+  standard-performance: config/base.yml
 
 AllCops:
   TargetRubyVersion: 3.3
